[125] [Ruchika] Add More Test Coverage